Refactoring, added lombok